[package]
name = "redumps"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossbeam = "0.8"
num_cpus = "1.16"
sonic-rs = "0.5.6"
zstd = "0.13.3"

[profile.release]
# lto = true
opt-level = 3

[profile.profiling]
inherits = "release"
debug = true
